--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,23 @@
-root                     = true
+root = true
 
 [*]
-end_of_line              = lf
-insert_final_newline     = true
+end_of_line = lf
+insert_final_newline = true
 trim_trailing_whitespace = true
-charset                  = utf-8
+charset = utf-8
 
 [*.lua]
-indent_style             = space
-indent_size              = 2
+indent_style = space
+indent_size = 2
+
+[*.rockspec]
+indent_style = space
+indent_size = 2
+
+[*.md]
+indent_style = space
+indent_size = 2
 
 [Makefile]
-indent_style             = tab
+indent_style = tab
+indent_size = 4
